# pktriggercord

./: Makefile  pk_ctrl.grpc.pb.h  pk_ctrl.pb.h  pktriggercord-cli.c  pktriggercord-grpc-server.cc  pktriggercord-grpc-server.h  pktriggercord-servermode.c  pslr.h  pslr_model.c
android/: AndroidManifest.xml  build.gradle
android/gradle/wrapper/: gradle-wrapper.properties
android/jni/: Android.mk  CMakeLists.txt
